syntax = "proto3";

package userauth;

option  go_package = "vremyavnikuda.sso.v1;sso_v1";

service UserService {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc GetAllUsers (Empty) returns (AllUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
}

message User {
  int64 id = 1;
  string login = 2;
  string first_name = 3;
  string last_name = 4;
  string middle_name = 5;
  int64 user_age = 6;
  string email = 7;
  bytes password = 8;
  string gender = 9;
  string b_days = 10;
  string role = 11;
}

message RegisterRequest {
  string login = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  int64 user_age = 5;
  string email = 6;
  bytes password = 7;
  string gender = 8;
  string b_days = 9;
  string role = 10;
}

message LoginRequest {
  string email = 1;
  bytes password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  int64 id = 1;
}

message LogoutResponse {
  string message = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  User user = 2;
}

message UserResponse {
  User user = 1;
}

message AllUsersResponse {
  repeated User users = 1;
}

message Empty {}
